newpost3 modal now links to page 10_TutorialEnd, on page 05.

--- a/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
+++ b/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
@@ -180,7 +180,7 @@
             </div>
             <div class="modal-footer">
                 <!-- Next Button-->
-                <a class="btn btn-outline-dark sidebar-upper-button" asp-area="" asp-page="/08_TutorialAfterPosting">
+                <a class="btn btn-outline-dark sidebar-upper-button" asp-area="" asp-page="/10_TutorialEnd">
                     Publish Post
                 </a>
             </div>
