Added process overview text to Index page - Welcome modal
https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/PkrmkADNuUGHQrFV1Flzj2QAPowc?Type=TaskLink&Channel=Link&CreatedTime=637263908569070000

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -85,9 +85,6 @@
 
 
 
-
-
-
 <div id="tutorial-modal-1" class="modal fade in">
     <div class="modal-dialog modal-lg">
         <div class="modal-content" style="background-color: #d7d7d7; border-radius: 20px;">
@@ -110,7 +107,8 @@
                             <img src="~/img/M1-SUIconSmall.png" height="40" width="33" />
                         </div>
                         <div class="modal-body-text">
-                            Picture - text text test lorem ipsum<br />flsjflsj dflj sdflk jsdklfj slfj sdlkfj
+                            Site access and the item exchange proccess <br />
+                            is restricted to SU community members<br />
                         </div>
                     </div>
 
@@ -119,7 +117,7 @@
                             <img src="~/img/M2-PushPinSmall.png" height="40" width="40" />
                         </div>
                         <div class="modal-body-text">
-                            Picture - text text test lorem ipsums<br />flsjflsj dflj sdflk  sldfj sdlkfj
+                            If you have something you want to get rid of, <br />you can make a post
                         </div>
                     </div>
 
@@ -128,7 +126,7 @@
                             <img src="~/img/M3-MagSmall.png" height="40" width="40" />
                         </div>
                         <div class="modal-body-text">
-                            Picture - text text test lorem ipsums<br />flsjflsj dflj sdflk  sldfj sdlkfj
+                            And if you would like to find a free item<br />you can browse what others have posted
                         </div>
                     </div>
 
@@ -137,7 +135,7 @@
                             <img src="~/img/M4-EmailSmall.png" height="40" width="40" />
                         </div>
                         <div class="modal-body-text">
-                            Picture - text text test lorem ipsum<br />flsjflsj dflj sdflk  sldfj sdlkfj
+                            Item givers and item seekers coordinate item exchanges<br /> via their SU email addresses
                         </div>
                     </div>
 
@@ -146,7 +144,7 @@
                             <img src="~/img/M5HandShakeSmall.png" height="40" width="40" />
                         </div>
                         <div class="modal-body-text">
-                            Picture - text text test lorem ipsums<br />flsjflsj dflj  sldfj sdlfj sdlkfj
+                            And voila! Items are seamlessly saved from the landfill <br />and recycled within the community
                         </div>
                     </div>
 
