--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -84,7 +84,7 @@
 
 
 
-
+<!-- Welcome and Process Overview Modal-->
 <div id="tutorial-modal-1" class="modal fade in">
     <div class="modal-dialog modal-lg">
         <div class="modal-content" style="background-color: #d7d7d7; border-radius: 20px;">
@@ -172,9 +172,6 @@
                     </div>
                 </div>
 
-                <!--
-                    <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" class="reusese-center" /></a>
-                 -->
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#tutorial-modal-2">next</button>
