Added documentation to User Agreement modal on Index page
https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/dgl2mUxGHkqLU-m5ttMPK2QAIrhU?Type=TaskLink&Channel=Link&CreatedTime=637263921718970000

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -180,6 +180,7 @@
     </div>
 </div>
 
+<!-- User Agreement Modal-->
 <div id="tutorial-modal-2" class="modal fade in">
     <div class="modal-dialog modal-lg">
         <div class="modal-content" style="border-radius: 20px; background-color: #d7d7d7;">
