Added text specifics to User Agreement modal on Index page
https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/dgl2mUxGHkqLU-m5ttMPK2QAIrhU?Type=TaskLink&Channel=Link&CreatedTime=637263921718970000

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -197,15 +197,16 @@
                     <div class="reusesu-table-row">
                         <div class="modal-body-text" style="width: 600px;">
                             <ul>
-                                <li><strong>Test</strong> test</li>
+                                <li>All items posted are to be considered <strong>free donations</strong>; requests for payment are not allowed.</li>
                                 <br />
-                                <li><strong>Test Test Test</strong> Lorem Impsum lorem ipsum</li>
+                                <li>Only <strong>tangible</strong> items should be posted; intangibles, such as services, are not allowed.</li>
                                 <br />
-                                <li><strong>Test test</strong> Test Test Lorem Ipsum</li>
+                                <li>Your <strong>name</strong> and <strong>SU email</strong> will be <strong>publicly visible</strong> to all other users if/when you make a post.</li>
                                 <br />
-                                <li>Test test <strong>Important important text</strong></li>
+                                <li>Be respectful to your fellow community members: Seattle University's <strong>code of conduct</strong> still applies here and inappropriate posts
+                                can be <strong>flagged and removed</strong></li>
                                 <br />
-                                <li>Test test <strong>More Important important text</strong> and here's some more unimportant text that will be long</li>
+                                <li>Please <strong>do not </strong> contact Facilities for help with moving large items; individuals are responsible for coordinating and handling item exchanges themselves.</li>
                                 <br />
                             </ul>
                         </div>
