--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -332,8 +332,9 @@
 }
 
 .listing-item-title {
+    color: black;
     margin-left: 15px;
-    margin-top: 10px;
+    margin-top: 5px;
     font-weight: bold;
     text-align:left;
     display: inline-block;
