Listings reordered with updated listing added, NewPostPurchase page. https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/74tIViotDUy01IatA-VNWWQAOVEk?Type=TaskLink&Channel=Link&CreatedTime=637263925200150000

--- a/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
+++ b/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
@@ -66,16 +66,16 @@
             <div class="listing-item-text">1 Great earbuds, only $75!</div>
         </div>
         <div class="listing">
+            <div class="listing-img"><img src="~/img/AppleEarbudsSmall.jpg"></div>
+            <a class="listing-item-title" asp-area="" asp-page="/12_ItemReadView" style="float:left">Factory Fresh Apple Earbuds, get them quick!</></a>
+            <div class="listing-item-date-person" style="float:right">January 23, 2020 by dherstad</div>
+            <div class="listing-item-text">Apple Earbuds available, barely used at all. This is a real sweet deal my fellow Seattle University students! Listen to sweet jams as if you were in the mosh pit! [...]</div>
+        </div>
+        <div class="listing">
             <div class="listing-img"><img src="~/img/default_image_mtn.png"></div>
             <div class="listing-item-title" style="float:left">Apple Earbuds 2</div>
             <div class="listing-item-date-person" style="float:right">January 23, 2020 by dherstad</div>
             <div class="listing-item-text">2 Great earbuds, only $75!</div>
-        </div>
-        <div class="listing">
-            <div class="listing-img"><img src="~/img/AppleEarbudsSmall.jpg"></div>
-            <a class="listing-item-title" asp-area="" asp-page="/12_ItemReadView" style="float:left">Apple Earbuds 3</></a>
-            <div class="listing-item-date-person" style="float:right">January 23, 2020 by dherstad</div>
-            <div class="listing-item-text">3 Great earbuds, only $75!</div>
         </div>
         <div class="listing">
             <div class="listing-img"><img src="~/img/default_image_mtn.png"></div>
