Corrected style-error in Elena's listing, https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/74tIViotDUy01IatA-VNWWQAOVEk?Type=TaskLink&Channel=Link&CreatedTime=637263925200150000

--- a/LoydCrafts.WebSite/Pages/10_TutorialEnd.cshtml
+++ b/LoydCrafts.WebSite/Pages/10_TutorialEnd.cshtml
@@ -47,7 +47,7 @@
 
         <!-- Newly created listing for Elena's Chair scenario item -->
         <div class="listing">
-            <div class="listing-img"><img style="top margin: 13px;" src="~/img/herman-miller-100px.jpg"></div>
+            <div class="listing-img"><img style="margin-top: 13px;" src="~/img/herman-miller-100px.jpg"></div>
             <div class="listing-item-title" style="float:left">Herman Miller Aeron Desk Chair</div>
             <div class="listing-item-date-person" style="float:right">May 2nd, 2020 by emapelli</div>
             <div class="listing-item-text">Herman Miller Aeron desk chair, black, like new condition.  I've only had it a few months but it's too big for my shared office.</div>
