Updated listings to reflect removal of flagged post, DemoEnd https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/74tIViotDUy01IatA-VNWWQAOVEk?Type=TaskLink&Channel=Link&CreatedTime=637263925200150000

--- a/LoydCrafts.WebSite/Pages/16_DemoEnd.cshtml
+++ b/LoydCrafts.WebSite/Pages/16_DemoEnd.cshtml
@@ -63,28 +63,31 @@
     <!-- The main area, for looking at item listings/posts -->
     <main role="main" class="pb-3">
         <div class="listing">
+            <div class="listing-img"><img style="margin-top: 13px;" src="~/img/herman-miller-100px.jpg"></div>
+            <div class="listing-item-title" style="float:left">Herman Miller Aeron Desk Chair</div>
+            <div class="listing-item-date-person" style="float:right">May 2nd, 2020 by emapelli</div>
+            <div class="listing-item-text">Herman Miller Aeron desk chair, black, like new condition.  I've only had it a few months but it's too big for my shared office.</div>
+        </div>
+
+        <div class="listing">
             <div class="listing-img"><img src="~/img/default_image_mtn.png"></div>
             <div class="listing-item-title" style="float:left">Apple Earbuds 1</div>
             <div class="listing-item-date-person" style="float:right">January 23, 2020 by dherstad</div>
             <div class="listing-item-text">1 Great earbuds, only $75!</div>
         </div>
+
+        <div class="listing">
+            <div class="listing-img"><img src="~/img/default_image_mtn.png"></div>
+            <div class="listing-item-title" style="float:left">Apple Earbuds 17</div>
+            <div class="listing-item-date-person" style="float:right">January 23, 2020 by dherstad</div>
+            <div class="listing-item-text">2 Great earbuds, only $75!</div>
+        </div>
+
         <div class="listing">
             <div class="listing-img"><img src="~/img/default_image_mtn.png"></div>
             <div class="listing-item-title" style="float:left">Apple Earbuds 2</div>
             <div class="listing-item-date-person" style="float:right">January 23, 2020 by dherstad</div>
             <div class="listing-item-text">2 Great earbuds, only $75!</div>
-        </div>
-        <div class="listing">
-            <div class="listing-img"><img src="~/img/default_image_mtn.png"></div>
-            <div class="listing-item-title" style="float:left">Apple Earbuds 4</div>
-            <div class="listing-item-date-person" style="float:right">January 23, 2020 by dherstad</div>
-            <div class="listing-item-text">4 Great earbuds, only $75!</div>
-        </div>
-        <div class="listing">
-            <div class="listing-img"><img src="~/img/default_image_mtn.png"></div>
-            <div class="listing-item-title" style="float:left">Ftaghn R'leh</></div>
-            <div class="listing-item-date-person" style="float:right">January 24, 2020 by xcalibur</div>
-            <div class="listing-item-text">Ancient Armoire, kept in family for untold generations</div>
         </div>
     </main>
 </div>
