Changed background of img thumbnails to blend in, on site.css https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/74tIViotDUy01IatA-VNWWQAOVEk?Type=TaskLink&Channel=Link&CreatedTime=637263925200150000

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -328,7 +328,7 @@
     height: 100px;
     width: 100px;
     float: left;
-    background-color: lightgray;
+    background-color: #f7f7f7;
 }
 
 .listing-item-title {
