Fixed New Post button link after page renames on shared Layout page.
https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/8FLv-ccJBUKEmeVM-7hfpGQAE9sw?Type=TaskLink&Channel=Link&CreatedTime=637264608415630000

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
         <!-- Contains the New Post and Search functionality -->
         <div class="utility-bar">
             <div class="new-post">
-                <a href="../05_NewPostSUPurchase" style="color: black;">
+                <a href="../create-post" style="color: black;">
                     <div class="new-post-plus">
                         +
                     </div>
