Fixed Publish Post link after page renaming in Create-Post page, Modal 3 Item Specifics. https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/8FLv-ccJBUKEmeVM-7hfpGQAE9sw?Type=TaskLink&Channel=Link&CreatedTime=637264628481720000

--- a/LoydCrafts.WebSite/Pages/create-post.cshtml
+++ b/LoydCrafts.WebSite/Pages/create-post.cshtml
@@ -180,10 +180,10 @@
             </div>
             <div class="modal-footer">
                 <!-- Next Button-->
-                <a class="btn btn-outline-dark sidebar-upper-button" asp-area="" asp-page="/10_TutorialEnd">
+                <a class="btn btn-outline-dark sidebar-upper-button" asp-area="" asp-page="/browsing">
                     Publish Post
                 </a>
-            </div>
+</div>
         </div>
     </div>
 </div>
