Fixed Confirm Flagging link (to Home page) in Flagging Modal of Item View page (factory-fresh-apple-airbuds) after page renaming. https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/y0P1hMy-VEa1OKkQmrLwMGQANwC7?Type=TaskLink&Channel=Link&CreatedTime=637264653258310000

--- a/LoydCrafts.WebSite/Pages/factory-fresh-apple-airbuds.cshtml
+++ b/LoydCrafts.WebSite/Pages/factory-fresh-apple-airbuds.cshtml
@@ -89,7 +89,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger"><a href="16_DemoEnd">Confirm Flagging</a></button>
+                <button type="button" class="btn btn-danger"><a href="/home">Confirm Flagging</a></button>
             </div>
         </div>
     </div>
