--- a/LoydCrafts.WebSite/Pages/create-post.cshtml
+++ b/LoydCrafts.WebSite/Pages/create-post.cshtml
@@ -60,11 +60,13 @@
     <!-- The main area, for looking at item listings/posts -->
     <main role="main" class="pb-3">
         <div class="listing">
-            <div class="listing-img"><img src="~/img/default_image_mtn.png"></div>
-            <div class="listing-item-title" style="float:left">Apple Earbuds 1</div>
-            <div class="listing-item-date-person" style="float:right">January 23, 2020 by dherstad</div>
-            <div class="listing-item-text">1 Great earbuds, only $75!</div>
+            <div class="listing-img"><img src="~/img/rsz_table.jpg"></div>
+            <div class="listing-item-title" style="float:left">Small end table, 3 ft high, 26" across</div>
+            <div class="listing-item-date-person" style="float:right">april 19th, 2020 by santoneth</div>
+            <div class="listing-item-text">A small end table, suitable for a potted plant or maybe a lamp. Not too sturdy, but as if brand new. [...]</div>
         </div>
+
+        <!-- Darren's post from Daniel's Scenario -->
         <div class="listing">
             <div class="listing-img"><img src="~/img/AppleEarbudsSmall.jpg"></div>
             <a class="listing-item-title" asp-area="" asp-page="/12_ItemReadView" style="float:left">Factory Fresh Apple Earbuds, get them quick!</></a>
@@ -72,18 +74,17 @@
             <div class="listing-item-text">Apple Earbuds available, barely used at all. This is a real sweet deal my fellow Seattle University students! Listen to sweet jams as if you were in the mosh pit! [...]</div>
         </div>
         <div class="listing">
-            <div class="listing-img"><img src="~/img/default_image_mtn.png"></div>
-            <div class="listing-item-title" style="float:left">Apple Earbuds 2</div>
-            <div class="listing-item-date-person" style="float:right">January 23, 2020 by dherstad</div>
-            <div class="listing-item-text">2 Great earbuds, only $75!</div>
+            <div class="listing-img"><img src="~/img/item_tablet_thumbnail.jpg"></div>
+            <div class="listing-item-title" style="float:left">iPhone 5se, some scratches, works fine</div>
+            <div class="listing-item-date-person" style="float:right">May 15th, 2020 by ksmithfield</div>
+            <div class="listing-item-text">iPhone 5se, an upgraded version of the last small iPhone model. Works fine. Has some wear and tear around the edges, but overall is in decent condition. [...]</div>
         </div>
         <div class="listing">
-            <div class="listing-img"><img src="~/img/default_image_mtn.png"></div>
-            <div class="listing-item-title" style="float:left">Apple Earbuds 4</div>
-            <div class="listing-item-date-person" style="float:right">January 23, 2020 by dherstad</div>
-            <div class="listing-item-text">4 Great earbuds, only $75!</div>
+            <div class="listing-img"><img src="~/img/rsz_barstools.jpg"></div>
+            <div class="listing-item-title" style="float:left">Matching barstools, Danish modern</div>
+            <div class="listing-item-date-person" style="float:right">May 30th, 2020 by ssook2</div>
+            <div class="listing-item-text">Moving from Chardin and need a home for my 2 matching barstools. Good condition. Slighty creaky, stop by to take a look.</div>
         </div>
-
     </main>
 </div>
 
