--- a/LoydCrafts.WebSite/Pages/browsing.cshtml
+++ b/LoydCrafts.WebSite/Pages/browsing.cshtml
@@ -54,10 +54,10 @@
         </div>
 
         <div class="listing">
-            <div class="listing-img"><img src="~/img/default_image_mtn.png"></div>
-            <div class="listing-item-title" style="float:left">Apple Earbuds 1</div>
-            <div class="listing-item-date-person" style="float:right">January 23, 2020 by dherstad</div>
-            <div class="listing-item-text">1 Great earbuds, only $75!</div>
+            <div class="listing-img"><img src="~/img/rsz_table.jpg"></div>
+            <div class="listing-item-title" style="float:left">Small end table, 3 ft high, 26" across</div>
+            <div class="listing-item-date-person" style="float:right">april 19th, 2020 by santoneth</div>
+            <div class="listing-item-text">A small end table, suitable for a potted plant or maybe a lamp. Not too sturdy, but as if brand new. [...]</div>
         </div>
 
         <div class="listing">
@@ -68,10 +68,10 @@
         </div>
 
         <div class="listing">
-            <div class="listing-img"><img src="~/img/default_image_mtn.png"></div>
-            <div class="listing-item-title" style="float:left">Apple Earbuds 2</div>
-            <div class="listing-item-date-person" style="float:right">January 23, 2020 by dherstad</div>
-            <div class="listing-item-text">2 Great earbuds, only $75!</div>
+            <div class="listing-img"><img src="~/img/rsz_barstools.jpg"></div>
+            <div class="listing-item-title" style="float:left">Matching barstools, Danish modern</div>
+            <div class="listing-item-date-person" style="float:right">May 30th, 2020 by ssook2</div>
+            <div class="listing-item-text">Moving from Chardin and need a home for my 2 matching barstools. Good condition. Slighty creaky, stop by to take a look.</div>
         </div>
 
     </main>
