Corrected listings dates text in home https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/5bg0giCuNkyrCfjUdqhXVGQAMJgt?Type=TaskLink&Channel=Link&CreatedTime=637264635678010000

--- a/LoydCrafts.WebSite/Pages/home.cshtml
+++ b/LoydCrafts.WebSite/Pages/home.cshtml
@@ -62,6 +62,8 @@
 
     <!-- The main area, for looking at item listings/posts -->
     <main role="main" class="pb-3">
+
+        <!-- Newly created listing for Elena's Chair scenario item -->
         <div class="listing">
             <div class="listing-img"><img style="margin-top: 13px;" src="~/img/herman-miller-100px.jpg"></div>
             <div class="listing-item-title" style="float:left">Herman Miller Aeron Desk Chair</div>
@@ -82,7 +84,7 @@
             <div class="listing-item-date-person" style="float:right">May 1st, 2020 by ksmithfield</div>
             <div class="listing-item-text">iPhone 5se, an upgraded version of the last small iPhone model. Works fine. Has some wear and tear around the edges, but overall is in decent condition. [...]</div>
         </div>
-        
+
         <div class="listing">
             <div class="listing-img"><img src="~/img/rsz_barstools.jpg"></div>
             <div class="listing-item-title" style="float:left">Matching barstools, Danish modern</div>
