Added documentation to Browsing page https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/X9Vp68xSmky3FYbLxfzFnWQAAdbQ?Type=TaskLink&Channel=Link&CreatedTime=637264891218550000

--- a/LoydCrafts.WebSite/Pages/browsing.cshtml
+++ b/LoydCrafts.WebSite/Pages/browsing.cshtml
@@ -11,7 +11,7 @@
     <!-- A container for the sidebar information-->
     <div class="sidebar">
 
-        <!-- The upper box of the left sidebar -->
+        <!-- The upper box of the left sidebar - main site navigation buttons -->
         <div class="sidebar-upper">
 
             <button type="button" class="btn btn-outline-dark sidebar-upper-button">Home</button><br />
@@ -24,7 +24,7 @@
 
         </div>
 
-        <!-- Lower box of the left sidebar -->
+        <!-- Lower box of the left sidebar - item filters for browsing -->
         <div class="sidebar-lower">
 
             <div class="lower-sidebar-text">Set defaults</div>
@@ -53,6 +53,7 @@
             <div class="listing-item-text">Herman Miller Aeron desk chair, black, like new condition.  I've only had it a few months but it's too big for my shared office.</div>
         </div>
 
+        <!-- Sample data -->
         <div class="listing">
             <div class="listing-img"><img src="~/img/rsz_table.jpg"></div>
             <div class="listing-item-title" style="float:left">Small end table, 3 ft high, 26" across</div>
@@ -60,7 +61,7 @@
             <div class="listing-item-text">A small end table, suitable for a potted plant or maybe a lamp. Not too sturdy, but serviceable. Please take it even if to try, next stop will be the trash!</div>
         </div>
 
-        <!-- Darren's post from Daniel's Scenario -->
+        <!-- Darren's post from Daniel's Scenario - only item with working link -->
         <div class="listing">
             <div class="listing-img"><img src="~/img/AppleEarbudsSmall.jpg"></div>
             <a class="listing-item-title" asp-area="" asp-page="/factory-fresh-apple-airbuds" style="float:left">Factory Fresh Apple Earbuds, get them quick!</></a>
@@ -68,6 +69,7 @@
             <div class="listing-item-text">Apple Earbuds available, barely used at all. This is a real sweet deal my fellow Seattle University students! Listen to sweet jams as if you were in the mosh pit! [...]</div>
         </div>
 
+        <!-- Sample data -->
         <div class="listing">
             <div class="listing-img"><img src="~/img/rsz_barstools.jpg"></div>
             <div class="listing-item-title" style="float:left">Matching barstools, Danish modern</div>
