--- a/LoydCrafts.WebSite/Pages/create-post.cshtml
+++ b/LoydCrafts.WebSite/Pages/create-post.cshtml
@@ -4,6 +4,9 @@
     ViewData["Title"] = "NewPostSUPurchase";
 }
 
+<!-- Contains code for New Post modals: SU Purchase, Item Category, and Item Specifics-->
+
+
 <!-- JS copy/pasted from https://www.tutorialrepublic.com/faq/how-to-launch-bootstrap-modal-on-page-load.php -->
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
@@ -13,11 +16,7 @@
     });
 </script>
 
-<!--
-<a class="nav-link text-dark" asp-area="" asp-page="/06_NewPostCategorySelection"> <img src="~/img/05_su_purchased_q.jpg" /></a>
 
-<h1>NewPostSUPurchase</h1>
--->
 <!-- Contains sidebar-upper, and then everything else is page-specific-->
 <div class="container">
 
@@ -31,9 +30,7 @@
             <button type="button" class="btn btn-outline-dark sidebar-upper-button">Home</button><br />
             <button type="button" class="btn btn-outline-dark sidebar-upper-button">About</button>
             <button type="button" class="btn btn-outline-dark sidebar-upper-button">Usage Guidelines</button>
-            <button type="button" class="btn btn-outline-dark sidebar-upper-button" data-toggle="modal" data-target="#tutModal">
-                Tutorial
-            </button>
+            <button type="button" class="btn btn-outline-dark sidebar-upper-button" data-toggle="modal" data-target="#tutModal">Tutorial</button>
             <button type="button" class="btn btn-outline-dark sidebar-upper-button">My Posts</button>
 
         </div>
@@ -41,10 +38,12 @@
         <!-- Lower box of the left sidebar -->
         <div class="sidebar-lower">
 
+            <!--Default Setting Selection-->
             <div class="lower-sidebar-text">Set defaults</div>
             <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
             <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
 
+            <!--Category Selection-->
             <div class="lower-sidebar-text">Filter by Category</div>
             <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
             <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
@@ -52,79 +51,118 @@
             <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
             <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
             <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
+        
         </div>
 
     </div>
 
 
-    <!-- The main area, for looking at item listings/posts -->
+    <!-- The main area, for looking at item listings/posts;  all of this will be in background of modals -->
     <main role="main" class="pb-3">
+        
         <div class="listing">
+            
             <div class="listing-img"><img src="~/img/rsz_table.jpg"></div>
             <div class="listing-item-title" style="float:left">Small end table, 3 ft high, 26" across</div>
             <div class="listing-item-date-person" style="float:right">May 2nd, 2020 by santoneth</div>
             <div class="listing-item-text">A small end table, suitable for a potted plant or maybe a lamp. Not too sturdy, but serviceable. Please take it even if to try, next stop will be the trash!</div>
+        
         </div>
 
         <!-- Darren's post from Daniel's Scenario -->
         <div class="listing">
+            
             <div class="listing-img"><img src="~/img/AppleEarbudsSmall.jpg"></div>
             <a class="listing-item-title" asp-area="" asp-page="/12_ItemReadView" style="float:left">Factory Fresh Apple Earbuds, get them quick!</></a>
             <div class="listing-item-date-person" style="float:right">May 1st, 2020 by dherstad</div>
             <div class="listing-item-text">Apple Earbuds available, barely used at all. This is a real sweet deal my fellow Seattle University students! Listen to sweet jams as if you were in the mosh pit! [...]</div>
-        </div>
         
+        </div>
+
+        <!-- Sample listing-->
         <div class="listing">
+            
             <div class="listing-img"><img src="~/img/item_tablet_thumbnail.jpg"></div>
             <div class="listing-item-title" style="float:left">iPhone 5se, some scratches, works fine</div>
             <div class="listing-item-date-person" style="float:right">May 1st, 2020 by ksmithfield</div>
             <div class="listing-item-text">iPhone 5se, an upgraded version of the last small iPhone model. Works fine. Has some wear and tear around the edges, but overall is in decent condition. [...]</div>
+        
         </div>
 
+        <!-- Sample listing-->
         <div class="listing">
+            
             <div class="listing-img"><img src="~/img/rsz_barstools.jpg"></div>
             <div class="listing-item-title" style="float:left">Matching barstools, Danish modern</div>
             <div class="listing-item-date-person" style="float:right">April 30th, 2020 by ssook2</div>
             <div class="listing-item-text">Moving from Chardin and need a home for my 2 matching barstools. Good condition. Slighty creaky, stop by to take a look.</div>
+        
         </div>
+    
     </main>
+
 </div>
 
-
+<!-- NEW POST MODALS-->
+<!-- Page 1/3: SU Purchase Status -->
 <div id="newpost1-modal" class="modal fade in">
+   
     <div class="modal-dialog modal-lg" style="border-radius: 20px; background-color: #d7d7d7;">
-        <div class="modal-content style="width: 850px;"">
+       
+        <div class="modal-content style=" width: 850px;"">
+            
+            <!--Header-->
             <div class="modal-header">
+                
                 <h3 class="modal-title boldfont">Was this item purchased with SU funds?</h3>
+            
             </div>
+            
+            <!--Body-->
             <div class="modal-body">
+                
                 <div class="create-post-title" style="margin-bottom: 100px">Was this item purchased with SU funds?</div>
+                    
                 <form action="">
-                    <input type="radio" id="Yes" name="SUPurchase" value="Yes" checked>
-                    <label for="Yes" style="font-size: 30px;">Yes</label><br>
-                    <input type="radio" id="No" name="SUPurchase" value="No">
-                    <label for="No" style="font-size: 30px;">No</label><br>
-                    <br>
+                        <input type="radio" id="Yes" name="SUPurchase" value="Yes" checked>
+                        <label for="Yes" style="font-size: 30px;">Yes</label><br>
+                        <input type="radio" id="No" name="SUPurchase" value="No">
+                        <label for="No" style="font-size: 30px;">No</label><br>
+                        <br>
                 </form>
+            
             </div>
+            
+            <!--Footer-->
             <div class="modal-footer">
-                <!-- Next Button-->
-                <a class="btn btn-outline-dark sidebar-upper-button" data-dismiss="modal" data-toggle="modal" data-target="#newpost2-modal">
-                    Next
-                </a>
+                
+                <a class="btn btn-outline-dark sidebar-upper-button" data-dismiss="modal" data-toggle="modal" data-target="#newpost2-modal">Next</a>
+            
             </div>
+        
         </div>
+    
     </div>
+
 </div>
 
-
+<!-- Page 2/3: Category Selection -->
 <div id="newpost2-modal" class="modal fade in">
+    
     <div class="modal-dialog modal-lg" style="border-radius: 20px; background-color: #d7d7d7;">
-        <div class="modal-content style="width: 850px;"">
+        
+        <div class="modal-content style=" width: 850px;"">
+            
+            <!--Header-->
             <div class="modal-header">
+               
                 <h3 class="modal-title boldfont">Was this item purchased with SU funds?</h3>
+            
             </div>
+            
+            <!--Body-->
             <div class="modal-body">
+                
                 <div class="create-post-title" style="margin-bottom: 80px">Which category best describes your item?</div>
 
                 <div class="create-post-checkbox"><input type="checkbox" checked />&nbsp;Furniture</div>
@@ -132,63 +170,96 @@
                 <div class="create-post-checkbox"><input type="checkbox" />&nbsp;Books</div>
                 <div class="create-post-checkbox"><input type="checkbox" />&nbsp;Electronics</div>
                 <div class="create-post-checkbox"><input type="checkbox" />&nbsp;Misc</div>
+            
             </div>
+            
+            <!--Footer-->
             <div class="modal-footer">
-                <!-- Next Button-->
-                <a class="btn btn-outline-dark sidebar-upper-button" data-dismiss="modal" data-toggle="modal" data-target="#newpost3-modal">
-                    Next
-                </a>
+               
+                <a class="btn btn-outline-dark sidebar-upper-button" data-dismiss="modal" data-toggle="modal" data-target="#newpost3-modal">Next</a>
+            
             </div>
+       
         </div>
+    
     </div>
+
 </div>
 
+<!-- Page 3/3: Item Specifics-->
 <div id="newpost3-modal" class="modal fade in">
+    
     <div class="modal-dialog modal-lg" style="border-radius: 20px; background-color: #d7d7d7;">
+        
         <div class="modal-content" style="width: 850px;">
+
+            <!--Header-->
             <div class="modal-header">
+                
                 <h3 class="modal-title boldfont">Item Specifics</h3> <br />
                 <h4>Make a new post: 3 of 3</h4>
+            
             </div>
+
+            <!--Body-->
             <div class="modal-body">
-                <div class="create-post-photo-section">
-                    Add Photos
+                
+                <!-- Photo Section-->
+                <div class="create-post-photo-section">Add Photos
+                    
                     <img id="create-post-image" src="~/img/Herman-Miller-Aeron-Chair-Smaller.jpeg" />
                     <button type="button" class="btn btn-outline-dark sidebar-upper-button" style="margin-top: 150px;">Upload Photo(s)</button><br />
+                
                 </div>
+
+                <!--Text Input Section-->
                 <div class="create-post-text-section">
+                    
                     <!-- Title section-->
-                    <div class="create-post-component">
-                        Title*
+                    <div class="create-post-component">Title*
+                        
                         <form action="#" method="post">
                             <textarea name="textarea" cols="40" rows="2">Herman Miller Aeron Desk Chair</textarea>
                         </form>
+                    
                     </div>
+                   
                     <!-- Description section-->
-                    <div class="create-post-component">
-                        Description*
+                    <div class="create-post-component">Description*
+
                         <form action="#" method="post">
                             <textarea name="textarea" cols="40" rows="10">Herman Miller Aeron desk chair, black, like new condition.  I've only had it a few months but it's too big for my shared office.  Dimensions are approximately 17 x 24 x 42".
                         </textarea>
                         </form>
+                    
                     </div>
+                    
                     <!-- Logistics section -->
-                    <div class="create-post-component">
-                        Logistics
+                    <div class="create-post-component">Logistics
+
                         <form action="#" method="post">
                             <textarea name="textarea" cols="40" rows="5">My office is PIGT 523.  I have a new chair coming on 5/12 and would like to have it gone by then, should be easy to roll.  Email me to coordinate timing.​</textarea>
                         </form>
+
                     </div>
+
                 </div>
+
             </div>
+            
+            <!--Footer-->
             <div class="modal-footer">
-                <!-- Next Button-->
+
                 <a class="btn btn-outline-dark sidebar-upper-button" asp-area="" asp-page="/browsing">
                     Publish Post
                 </a>
-</div>
+
+            </div>
+        
         </div>
+    
     </div>
+
 </div>
 
 
