--- a/LoydCrafts.WebSite/Pages/browsingStudent.cshtml
+++ b/LoydCrafts.WebSite/Pages/browsingStudent.cshtml
@@ -4,5 +4,78 @@
     ViewData["Title"] = "browsingStudent";
 }
 
-<h1>browsingStudent</h1>
+<!-- Contains sidebar-upper, and then everything else is page-specific-->
+<div class="container">
 
+
+    <!-- A container for the sidebar information-->
+    <div class="sidebar">
+
+        <!-- The upper box of the left sidebar - main site navigation buttons -->
+        <div class="sidebar-upper">
+
+            <button type="button" class="btn btn-outline-dark sidebar-upper-button">Home</button><br />
+            <button type="button" class="btn btn-outline-dark sidebar-upper-button">About</button>
+            <button type="button" class="btn btn-outline-dark sidebar-upper-button">Usage Guidelines</button>
+            <button type="button" class="btn btn-outline-dark sidebar-upper-button" data-toggle="modal" data-target="#tutModal">
+                Tutorial
+            </button>
+            <button type="button" class="btn btn-outline-dark sidebar-upper-button">My Posts</button>
+
+        </div>
+
+        <!-- Lower box of the left sidebar - item filters for browsing -->
+        <div class="sidebar-lower">
+
+            <div class="lower-sidebar-text">Set defaults</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
+            <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
+
+            <div class="lower-sidebar-text">Filter by Category</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
+            <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
+            <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
+            <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
+        </div>
+
+    </div>
+
+    <!-- The main area, for looking at item listings/posts -->
+    <main role="main" class="pb-3">
+
+        <!-- Newly created listing for Elena's Chair scenario item -->
+        <div class="listing">
+            <div class="listing-img"><img style="margin-top: 13px;" src="~/img/herman-miller-100px.jpg"></div>
+            <div class="listing-item-title" style="float:left">Herman Miller Aeron Desk Chair</div>
+            <div class="listing-item-date-person" style="float:right">May 2nd, 2020 by emapelli</div>
+            <div class="listing-item-text">Herman Miller Aeron desk chair, black, like new condition.  I've only had it a few months but it's too big for my shared office.</div>
+        </div>
+
+        <!-- Sample data -->
+        <div class="listing">
+            <div class="listing-img"><img src="~/img/rsz_table.jpg"></div>
+            <div class="listing-item-title" style="float:left">Small end table, 3 ft high, 26" across</div>
+            <div class="listing-item-date-person" style="float:right">May 2nd, 2020 by santoneth</div>
+            <div class="listing-item-text">A small end table, suitable for a potted plant or maybe a lamp. Not too sturdy, but serviceable. Please take it even if to try, next stop will be the trash!</div>
+        </div>
+
+        <!-- Darren's post from Daniel's Scenario - only item with working link -->
+        <div class="listing">
+            <div class="listing-img"><img src="~/img/AppleEarbudsSmall.jpg"></div>
+            <a class="listing-item-title" asp-area="" asp-page="/factory-fresh-apple-airbuds" style="float:left">Factory Fresh Apple Earbuds, get them quick!</></a>
+            <div class="listing-item-date-person" style="float:right">May 1st, 2020 by dherstad</div>
+            <div class="listing-item-text">Apple Earbuds available, barely used at all. This is a real sweet deal my fellow Seattle University students! Listen to sweet jams as if you were in the mosh pit! [...]</div>
+        </div>
+
+        <!-- Sample data -->
+        <div class="listing">
+            <div class="listing-img"><img src="~/img/rsz_barstools.jpg"></div>
+            <div class="listing-item-title" style="float:left">Matching barstools, Danish modern</div>
+            <div class="listing-item-date-person" style="float:right">April 30th, 2020 by ssook2</div>
+            <div class="listing-item-text">Moving from Chardin and need a home for my 2 matching barstools. Good condition. Slighty creaky, stop by to take a look.</div>
+        </div>
+
+    </main>
+</div>
