Updated Logout button to link to Browsing Student page for demo flow (in Layout page) https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/MKP6cLe4jkiyRg98XbUBOmQANGYf?Type=TaskLink&Channel=Link&CreatedTime=637264921754440000

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
             </div>
             <div class="header-motto">
                 Simple, sustainable sharing
-                <button type="button" class="btn btn-outline-dark header-logout">Logout</button>
+                <a class="btn btn-outline-dark header-logout" asp-area="" asp-page="/browsingStudent">Logout</a>
             </div>
         </div>
 
