Made item contents match that of Index page (no Elena chair) for Browsing Student page
https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/MKP6cLe4jkiyRg98XbUBOmQANGYf?Type=TaskLink&Channel=Link&CreatedTime=637264925273320000

--- a/LoydCrafts.WebSite/Pages/browsingStudent.cshtml
+++ b/LoydCrafts.WebSite/Pages/browsingStudent.cshtml
@@ -45,15 +45,7 @@
     <!-- The main area, for looking at item listings/posts -->
     <main role="main" class="pb-3">
 
-        <!-- Newly created listing for Elena's Chair scenario item -->
-        <div class="listing">
-            <div class="listing-img"><img style="margin-top: 13px;" src="~/img/herman-miller-100px.jpg"></div>
-            <div class="listing-item-title" style="float:left">Herman Miller Aeron Desk Chair</div>
-            <div class="listing-item-date-person" style="float:right">May 2nd, 2020 by emapelli</div>
-            <div class="listing-item-text">Herman Miller Aeron desk chair, black, like new condition.  I've only had it a few months but it's too big for my shared office.</div>
-        </div>
-
-        <!-- Sample data -->
+        <!-- Same first item on Index page, Elena's chair is not visible! -->
         <div class="listing">
             <div class="listing-img"><img src="~/img/rsz_table.jpg"></div>
             <div class="listing-item-title" style="float:left">Small end table, 3 ft high, 26" across</div>
@@ -61,7 +53,7 @@
             <div class="listing-item-text">A small end table, suitable for a potted plant or maybe a lamp. Not too sturdy, but serviceable. Please take it even if to try, next stop will be the trash!</div>
         </div>
 
-        <!-- Darren's post from Daniel's Scenario - only item with working link -->
+        <!-- Darren's post from Daniel's Scenario -->
         <div class="listing">
             <div class="listing-img"><img src="~/img/AppleEarbudsSmall.jpg"></div>
             <a class="listing-item-title" asp-area="" asp-page="/factory-fresh-apple-airbuds" style="float:left">Factory Fresh Apple Earbuds, get them quick!</></a>
@@ -69,7 +61,13 @@
             <div class="listing-item-text">Apple Earbuds available, barely used at all. This is a real sweet deal my fellow Seattle University students! Listen to sweet jams as if you were in the mosh pit! [...]</div>
         </div>
 
-        <!-- Sample data -->
+        <div class="listing">
+            <div class="listing-img"><img src="~/img/item_tablet_thumbnail.jpg"></div>
+            <div class="listing-item-title" style="float:left">iPhone 5se, some scratches, works fine</div>
+            <div class="listing-item-date-person" style="float:right">May 1st, 2020 by ksmithfield</div>
+            <div class="listing-item-text">iPhone 5se, an upgraded version of the last small iPhone model. Works fine. Has some wear and tear around the edges, but overall is in decent condition. [...]</div>
+        </div>
+
         <div class="listing">
             <div class="listing-img"><img src="~/img/rsz_barstools.jpg"></div>
             <div class="listing-item-title" style="float:left">Matching barstools, Danish modern</div>
