Adjusted content of final item listed in Home page (demo end page) https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/MKP6cLe4jkiyRg98XbUBOmQANGYf?Type=TaskLink&Channel=Link&CreatedTime=637264934570440000

--- a/LoydCrafts.WebSite/Pages/home.cshtml
+++ b/LoydCrafts.WebSite/Pages/home.cshtml
@@ -64,12 +64,6 @@
     <main role="main" class="pb-3">
 
         <!-- Newly created listing for Elena's Chair scenario item -->
-        <div class="listing">
-            <div class="listing-img"><img style="margin-top: 13px;" src="~/img/herman-miller-100px.jpg"></div>
-            <div class="listing-item-title" style="float:left">Herman Miller Aeron Desk Chair</div>
-            <div class="listing-item-date-person" style="float:right">May 2nd, 2020 by emapelli</div>
-            <div class="listing-item-text">Herman Miller Aeron desk chair, black, like new condition.  I've only had it a few months but it's too big for my shared office.</div>
-        </div>
 
         <div class="listing">
             <div class="listing-img"><img src="~/img/rsz_table.jpg"></div>
@@ -91,7 +85,16 @@
             <div class="listing-item-date-person" style="float:right">April 30th, 2020 by ssook2</div>
             <div class="listing-item-text">Moving from Chardin and need a home for my 2 matching barstools. Good condition. Slighty creaky, stop by to take a look.</div>
         </div>
+
+        <div class="listing">
+            <div class="listing-img"><img src="~/img/rsz_barstools.jpg"></div>
+            <div class="listing-item-title" style="float:left">Four mini fake cacti/succulents!!</div>
+            <div class="listing-item-date-person" style="float:right">April 29th, 2020 by jjenson</div>
+            <div class="listing-item-text">Finally have the right lighting to get real plants, now my fake succulent babies need a new home! Super cute and [...]</div>
+        </div>
+    
     </main>
+
 </div>
 
 
