Adjusted image for final item listing in Home page https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/MKP6cLe4jkiyRg98XbUBOmQANGYf?Type=TaskLink&Channel=Link&CreatedTime=637264934570440000

--- a/LoydCrafts.WebSite/Pages/home.cshtml
+++ b/LoydCrafts.WebSite/Pages/home.cshtml
@@ -87,7 +87,7 @@
         </div>
 
         <div class="listing">
-            <div class="listing-img"><img src="~/img/rsz_barstools.jpg"></div>
+            <div class="listing-img"><img src="~/img/succulents.PNG"></div>
             <div class="listing-item-title" style="float:left">Four mini fake cacti/succulents!!</div>
             <div class="listing-item-date-person" style="float:right">April 29th, 2020 by jjenson</div>
             <div class="listing-item-text">Finally have the right lighting to get real plants, now my fake succulent babies need a new home! Super cute and [...]</div>
