"next" buttons removed from modals on create-post https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/DxRIG_tLxk-Wa_6NYgpJmGQAMiWY?Type=TaskLink&Channel=Link&CreatedTime=637264945178300000

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -282,7 +282,6 @@
                     -->
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#tutorial-modal-3a">next</button>
             </div>
         </div>
     </div>
@@ -323,9 +322,7 @@
                 <!--<img src="~/img/03_start_tutorial.jpg" class="modal-tutorial-img" />
                     -->
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#tutorial-modal-3b">next</button>
-            </div>
+            <div class="modal-footer"></div>
         </div>
     </div>
 </div>
@@ -364,9 +361,7 @@
                 <!--<img src="~/img/03_start_tutorial.jpg" class="modal-tutorial-img" />
                     -->
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#tutorial-modal-4">next</button>
-            </div>
+            <div class="modal-footer"></div>
         </div>
     </div>
 </div>
@@ -405,9 +400,7 @@
                 <!--<img src="~/img/10_tutorial_finish.jpg" class="modal-tutorial-img" />
                     -->
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#">next</button>
-            </div>
+            <div class="modal-footer"></div>
         </div>
     </div>
 </div>
@@ -421,9 +414,7 @@
             <div class="modal-body">
                 <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#tutorial-modal-5">next</button>
-            </div>
+            <div class="modal-footer"></div>
         </div>
     </div>
 </div>
