Input images and sample text into Tutorial modal on Index page https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/Bo6Pz4JJb0uMED3oYZ_kqmQAFs7P?Type=TaskLink&Channel=Link&CreatedTime=637264957594940000

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -292,16 +292,44 @@
             <div class="modal-header">
             </div>
             <div class="modal-body">
-              
-                <div class="reuse-mod-body">
-                    Post Management<br />
+                <!--
+    <div class="reuse-mod-body">
+        Post Management<br />
+    </div>
+    <br />
+    <div class="modal-body-small-it">
+        Lorem Ipsum
+    </div>
+    <br />
+    <br /> -->
+                <div class="reusesu-table-row">
+                    <div class="modal-body-img">
+                        <img src="~/img/Tutorial_NewPostButton.PNG"/>
+                    </div>
+                    <div class="modal-body-text">
+                        Something about making New Posts
+                    </div>
                 </div>
-                <br />
-                <div class="modal-body-small-it">
-                    Lorem Ipsum
+
+                <div class="reusesu-table-row">
+                    <div class="modal-body-img">
+                        <img src="~/img/Tutorial_ItemViewLink.PNG" />
+                    </div>
+                    <div class="modal-body-text">
+                        Something about viewing posts
+                    </div>
                 </div>
-                <br />
-                <br />
+
+                <div class="reusesu-table-row">
+                    <div class="modal-body-img">
+                        <img src="~/img/Tutorial_EditDeletePostButtons.PNG" />
+                    </div>
+                    <div class="modal-body-text">
+                        Something about editing and deleting posts
+                    </div>
+                </div>
+
+
                 <div class="modal-buttons">
                     <div class="modal-button-container">
                         <button type="button" style="font-size:x-large;" class="btn btn-outline-dark modal-button"
