Changed listing info to match photo on home https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/5bg0giCuNkyrCfjUdqhXVGQAMJgt?Type=TaskLink&Channel=Link&CreatedTime=637264635678010000

--- a/LoydCrafts.WebSite/Pages/home.cshtml
+++ b/LoydCrafts.WebSite/Pages/home.cshtml
@@ -73,10 +73,10 @@
         </div>
 
         <div class="listing">
-            <div class="listing-img"><img src="~/img/item_tablet_thumbnail.jpg"></div>
-            <div class="listing-item-title" style="float:left">iPhone 5se, some scratches, works fine</div>
+            <div class="listing-img"><img src="~/img/iphone_3gs.jpg"></div>
+            <div class="listing-item-title" style="float:left">iPhone 3, some scratches, works fine</div>
             <div class="listing-item-date-person" style="float:right">May 1st, 2020 by ksmithfield</div>
-            <div class="listing-item-text">iPhone 5se, an upgraded version of the last small iPhone model. Works fine. Has some wear and tear around the edges, but overall is in decent condition. [...]</div>
+            <div class="listing-item-text">iPhone 3gs. Ancient but works fine, may be locked into AT&amp;T Has some wear and tear around the edges, but overall is in decent condition. [...]</div>
         </div>
 
         <div class="listing">
@@ -92,7 +92,7 @@
             <div class="listing-item-date-person" style="float:right">April 29th, 2020 by jjenson</div>
             <div class="listing-item-text">Finally have the right lighting to get real plants, now my fake succulent babies need a new home! Super cute and [...]</div>
         </div>
-    
+
     </main>
 
 </div>
