--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -71,10 +71,10 @@
         </div>
 
         <div class="listing">
-            <div class="listing-img"><img src="~/img/item_tablet_thumbnail.jpg"></div>
-            <div class="listing-item-title" style="float:left">iPhone 5se, some scratches, works fine</div>
+            <div class="listing-img"><img src="~/img/iphone_3gs.jpg"></div>
+            <div class="listing-item-title" style="float:left">iPhone 3, some scratches, works fine</div>
             <div class="listing-item-date-person" style="float:right">May 1st, 2020 by ksmithfield</div>
-            <div class="listing-item-text">iPhone 5se, an upgraded version of the last small iPhone model. Works fine. Has some wear and tear around the edges, but overall is in decent condition. [...]</div>
+            <div class="listing-item-text">iPhone 3gs. Ancient but works fine, may be locked into AT&amp;T Has some wear and tear around the edges, but overall is in decent condition. [...]</div>
         </div>
 
         <div class="listing">
