Change modal buttons to match SU Colors in site.css
https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/DxRIG_tLxk-Wa_6NYgpJmGQAMiWY?Type=TaskLink&Channel=Link&CreatedTime=637265113081740000

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -149,7 +149,8 @@
 .modal-button {
     width: 200px;
     margin: 5px 10px;
-    background-color: #EEE;
+    background-color: #AA0000;
+    color: antiquewhite;
 }
 
 .modal-link{
