Create new css formatting for student/staff separation section in site.css
https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/MKP6cLe4jkiyRg98XbUBOmQANGYf?Type=TaskLink&Channel=Link&CreatedTime=637265117285750000

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -355,6 +355,10 @@
     margin-left: 115px;
 }
 
+.listing-item-studentstaff{
+    float: right;
+}
+
 /* Create new post pages */
 .create-post-header {
     font-size: 40px;
