Add in the CSS's formatting to the item listing on index.cshtml
https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/MKP6cLe4jkiyRg98XbUBOmQANGYf?Type=TaskLink&Channel=Link&CreatedTime=637265117285750000

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -82,7 +82,7 @@
             <div class="listing-item-title" style="float:left">Matching barstools, Danish modern</div>
             <div class="listing-item-date-person" style="float:right">April 30th, 2020 by ssook2</div>
             <div class="listing-item-text">Moving from Chardin and need a home for my 2 matching barstools. Good condition. Slighty creaky, stop by to take a look.</div>
-            <div>Personal</div>
+            <div class="listing-item-studentstaff">Personal Item</div>
         </div>
 
     </main>
