Modify student/staff designator in item listing using site.css
https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/MKP6cLe4jkiyRg98XbUBOmQANGYf?Type=TaskLink&Channel=Link&CreatedTime=637265124947940000

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -355,9 +355,12 @@
     margin-left: 115px;
 }
 
-.listing-item-studentstaff{
+.listing-item-studentstaff {
     float: right;
+    color: #aa0000;
+    text-shadow: 0 0 4px antiquewhite, 0 0 5px #aa0000;
 }
+
 
 /* Create new post pages */
 .create-post-header {
